--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
     <p id="googft-legend-title">Type de vote en fonction du nombre d&#39;habitants</p>
     <div>
       <span class="googft-legend-swatch" style="background-color: #f1c232"></span>
-      <span class="googft-legend-range">scrutin majoritaire, plurinominal, à deux tours</span>
+      <span class="googft-legend-range">scrutin majoritaire, plurinominal, &agrave; deux tours</span>
     </div>
     <div>
       <span class="googft-legend-swatch" style="background-color: #cc0000"></span>
-      <span class="googft-legend-range">scrutin proportionnel de liste à deux tours</span>
+      <span class="googft-legend-range">scrutin proportionnel de liste &agrave; deux tours</span>
     </div>
     <input id="googft-legend-close" style="display:none" type="button" value="Hide"></input>
   </div>
